Implement function to get and show lavatory data

--- a/lavap/main/templates/main/frontparts/alert.html
+++ b/lavap/main/templates/main/frontparts/alert.html
@@ -36,9 +36,7 @@
 </style>
 <div class="alert_wrap">
     <div class="alert_box">
-        <span class="title">{{ alert.title }}エラー404</span>
-        <span
-            class="contents">{{ alert.contents }}お探しのページは見つかりませんでしたお探しのページは見つかりませんでしたお探しのページは見つかりませんでしたお探しのページは見つかりませんでした
-            お探しのページは見つかりませんでした</sapn>
+        <span class="title">{{ alert.title }}</span>
+        <span class="contents">{{ alert.contents }}</sapn>
     </div>
 </div>
