--- a/lavap/main/templates/main/index.html
+++ b/lavap/main/templates/main/index.html
@@ -1,13 +1,169 @@
 {% extends 'main/base.html' %}
 {% load static %}
 {% block contents %}
-<body>
-    <style>
-    #map {
-        width: 100vw;
-        height: calc(100vh - 40px);
-        margin-top: 40px;
+<style>
+    .map_wrapper {
+    position: relative;
+    top: 40px;
+    width: 100%;
+    padding-top: calc(100vh - 40px);
+    border: 1px solid #CCC;
     }
-    </style>
-    <div id="map"></div>
+    .map_wrapper .map {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    }
+    .building_name {
+        color: blue;
+        text-decoration: underline;
+        font-size: 16px;
+    }
+
+    .filled_star {
+        font-size: 18px;
+        color: yellow;
+        position: absolute;
+        overflow: hidden;
+    }
+
+    .solid_star {
+        font-size: 18px;
+        color: gray;
+    }
+
+    .detailes span {
+        margin: 0 5px;
+    }
+</style>
+<div class="map_wrapper">
+    <div id="map" class="map"></div>
+</div>
+<script>
+    var p_opt = {
+        enableHighAccuracy: false,
+        timeout: 50000,
+        maximumAge: 0,
+    };
+    var json_lavas = [];
+    var lava_pins = [];
+    var lava_pops = [];
+    var latlng, user_lat, user_lng, lat_int, lng_int;
+    var watch_id = navigator.geolocation.watchPosition(getPosFunc, errorFunc, p_opt);
+    function errorFunc(e) {
+        var e_msg = {
+            0: "原因不明のエラーが発生しました。",
+            1: "位置情報の取得が許可されませんでした。",
+            2: "位置情報が取得できませんでした。",
+            3: "タイムアウトしました。"
+        };
+        console.log(e_msg[e.code]);
+    }
+    function getPosFunc(position) {
+        user_lat = position.coords.latitude.toFixed(6);
+        user_lng = position.coords.longitude.toFixed(6);
+        lat_int = user_lat * 1000000;
+        lng_int = user_lng * 1000000;
+        latlng = new google.maps.LatLng(user_lat, user_lng);
+        map.setCenter(latlng);
+        user_maker.setPosition(latlng);
+        getLavatoriesFunc(lat_int, lng_int);
+        makeLavatoryMakers();
+        if (json_lavas.length > 0) navigator.geolocation.clearWatch(watch_id);
+    }
+
+    var map;
+    var user_maker;
+    var m_obj = document.getElementById('map');
+    var m_opt = {
+        center: latlng,
+        zoom: 15,
+        clickableIcons: false,
+        disableDefaultUI: false,
+        fullscreenControl: false,
+        mapTypeId: "roadmap", // "roadmap", "hybrid", "satellite", "terrain"
+        mapTypeControl: false,
+        maxZoom: 20,
+        minZoom: 8,
+        streetViewControl: false,
+        zoomControl: false,
+    };
+    google.maps.event.addDomListener(window, 'load', showMap());
+    function showMap() {
+        map = new google.maps.Map(m_obj, m_opt);
+        user_maker = new google.maps.Marker({
+            position: map.getCenter(),
+            map: map,
+            title: 'Now you are here.',
+            icon: 'http://maps.google.com/mapfiles/ms/micons/man.png',
+            animation: google.maps.Animation.DROP,
+        });
+    }
+
+    function makeLavatoryMakers() {
+        for (var i = 0; i < Object.keys(json_lavas).length; i++) {
+            var window=(function() {/*
+            <div class="lavatory_window" pk="$id$">
+                <div class="building_name">$building_name$</div>
+                <div class="score_ave">
+                    <span class="filled_star" style="width: calc($score_ave$ * 18px);">★★★★★</span>
+                    <span class="solid_star">☆☆☆☆☆</span>
+                </div>
+                <div class="detailes">
+                    <div>小： $urinals_num$</div>
+                    <div>洋： $bowls_num$</div>
+                    <div>和： $jp_styles_num$</div>
+                    <div>洗： $wash_num$</div>
+                </div>
+            </div>
+            */}).toString().match(/\/\*\n*([^]*)\*\//)[1];
+            var lava_latlng = new google.maps.LatLng(json_lavas[i]['lat'], json_lavas[i]['lng']);
+            lava_pins[i] = new google.maps.Marker({
+                map: map,
+                position: lava_latlng
+            });
+            var keys = ['id', 'building_name','score_ave','urinals_num','bowls_num','jp_styles_num','wash_num']
+            keys.forEach(function(key) {
+                window = window.replace("$"+key+"$", json_lavas[i][key] ? json_lavas[i][key] : 0);
+            });
+            lava_pops[i] = new google.maps.InfoWindow({content:window});
+            markerEvent(i);
+        }
+    }
+
+    function markerEvent(i) {
+        lava_pins[i].addListener('click', function() {
+            lava_pops[i].open(map, lava_pins[i]);
+        });
+    }
+
+    google.maps.event.addListener(map, 'click', function(e) {
+        var marker = new google.maps.Marker({
+            position: e.latLng,
+            map: this,
+        });
+        var infoWindow = new google.maps.InfoWindow({
+            content: "<div><a>Add a lavatory ?</a></div>" + e.latLng.toString()
+        });
+        google.maps.event.addListener(marker, 'click', function() {
+            infoWindow.open(map, marker);
+        });
+        google.maps.event.addListener(infoWindow, 'closeclick', function() {
+            marker.setMap(null);
+        });
+        google.maps.event.addListener(map, 'click', function() {
+            marker.setMap(null);
+        });
+    });
+
+    function getLavatoriesFunc(lat, lng) {
+        var request = new XMLHttpRequest();
+        request.open('GET', "http://54.65.251.97/api/lat/" + lat + "/lng/" + lng + "/", true);
+        request.onload = function () {json_lavas = JSON.parse(this.response);}
+        request.send();
+    }
+
+</script>
 {% endblock %}
